--- a/index.html
+++ b/index.html
@@ -5,52 +5,123 @@
 	<link rel="stylesheet" href="css/normalize.css" />
 	<style type="text/css">
 		body{		
+			background: #351424;
+		}		
+		.llm-logo{
+			position: absolute;
+			z-index: 5;
+			width: 250px;
+			height: 162px;
 		}
-		h1, .container{
-			width:1000px;
-			margin: 1em auto;
-		}
-		.container{		
-			padding: 10px;
-			background-color: #EEE;
-			overflow:auto;
-		}
-		.imgwrap{
-			width:250px;
-			height: 166px;	
-			float: left;
+		.container{	
+			position: absolute;
+			top:0;
+			left: 0;
 			overflow: hidden;
-			text-align: center;
+			width: 100%;
+			height: 100%;			
+			opacity: 0;
+			transition:opacity 0.9s ease;
 		}
+		.container.loaded{
+			opacity: 1;
+		}
+
 		.imgwrap img{
-			width:250px;
+			position: relative;
+		}
+		.date{
+			position: absolute;
+			bottom:20px;
+			right: 20px;
+			font-family: Georgia, serif;
+			font-size: 24px;
+			color: #FFF;
+
+		}
+		@media screen and (max-width: 400px){
+			.llm-logo{
+				left: 50%;
+				margin-left: -125px;
+			}
 		}
 	</style>
 </head>
 <body>
-	<h1>Transformation of a man through 5 years of hard(ly any) work</h1>
-	<h2>
-	<div class="container">
-		
+	<img class="llm-logo" src="img/LaurelLeaveMemories.svg" alt="Laurel Leave Memories" />
+	<div class="container">		
 	</div>
 
  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
  <script type="text/javascript">
-	var dir = "Pictures/optimized/";
+	var win = $(window);
+	
+	function resizeImage() {
+		var	winHeight = win.height(),
+			winWidth = win.width(),
+			winRatio = winWidth / winHeight,
+			image = $(".container > .imgwrap > img"),
+			imageHeight = image.height(),
+			imageWidth = image.width(),
+			imageRatio = imageWidth / imageHeight;
+
+		if (winRatio > imageRatio) {
+			var newHeight = Math.round(winWidth / imageRatio)
+			image.css({
+				width: winWidth,
+				height: newHeight,
+				top: (winHeight / 2) - (newHeight / 2),
+				left: 0
+			});
+		}
+		else {
+			var newWidth = Math.round(winHeight * imageRatio)
+			image.css({
+				width: newWidth,
+				height: winHeight,
+				top: 0,
+				left:  (winWidth / 2) - (newWidth / 2)
+			})
+		};
+	};
+
+	var dir = "Pictures/";
 	var fileextension = ".jpg";
 	$.ajax({
 	    //This will retrieve the contents of the folder if the folder is configured as 'browsable'
 	    url: dir,
 	    success: function (data) {
-	        //List all png file names in the page
-	        $(data).find("a:contains(" + fileextension + ")").each(function () {
-	            var filename = this.href.replace(window.location.host, "").replace("http:///", "");	            
-	            $(".container").append(
-	            	$("<div class=\"imgwrap\"><a href=" + dir + filename + "><img src=" + dir + filename + "></img></a></div>") 
-	            );
-	        });
+	        //create array of all jpg file names in the page
+	        var files = $(data).find("a:contains(" + fileextension + ")");	       
+	        var randomFile = files[Math.floor(Math.random()*files.length)];
+	        var filename = randomFile.href.replace(window.location.host, "").replace("http:///", "");
+	        var datename = filename.replace(/%20/g, " ").replace("Photo on", "").replace(".jpg","");
+	        console.log(filename);
+
+	        $(".container").append(
+            	$("<div class=\"imgwrap\"><img id=\"hank\" src=" + dir + filename + "></img><span class=\"date\">" + datename + "</span></div>") 
+            );
+            $(".container > .imgwrap > img").load( function(){
+            	$(".container").addClass("loaded");
+            	resizeImage();		
+            });      
 	    }
 	});
+
+
+// call resizeImage on window load and resize 				
+	win.bind({
+	    load: function() {
+	      resizeImage();
+	    },
+	    resize: function() {
+	      resizeImage();
+	    }
+	});
+	win.click(function(){
+		location.reload();
+	})
+
  </script>
 	
 
